<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorChartToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_button"
        app:title="Chart"
        app:titleTextColor="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_more_vert_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:src="@drawable/baseline_loyalty_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="4 items in your cart"
        android:textColor="?attr/textCountItem"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />


    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/textInfo"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/list_item_layout" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="240dp"
        android:background="@drawable/dashed_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <!--subTotal-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"


        android:text="@string/subtotal"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Shipping"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_result" />
    <!--Shipping-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Shipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:text="@string/shipping"

        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tax"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/subTotal" />
    <!--Tax-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="96dp"


        android:text="@string/tax"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Shipping" />

    <!--Your order total-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"

        android:layout_marginBottom="184dp"
        android:text="@string/your_order_total"
        android:textColor="@color/textResult"

        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_result_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="41.24"

        android:textColor="@color/textResult"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/title_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"

        app:layout_constraintTop_toTopOf="@+id/title_result" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subTotalSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:text="36.00"


        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ShippingSum"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@id/subTotal" />

    <!--android:layout_marginTop="552dp"-->
    <!--android:layout_marginEnd="16dp"-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/taxSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="96dp"

        android:text="3.50"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ShippingSum" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ShippingSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:text="2.00"

        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/taxSum"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/subTotalSum" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payNow"
        style="@style/chartButton"
        android:layout_width="154dp"

        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="Pay now"
        app:icon="@drawable/baseline_account_balance_wallet_24"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>